   should work as it did before.
 - Template tag <qb:basepath/> has been renamed to <qb:urlpath/>, because a
   base path is something completely different: The basepath tag now contains
   the URL path to the directory where qb is installed (e.g. "/blog"), but not
   the path to the current article or directory. As mentioned above, you can
   find that information now in <qb:urlpath/>. Last but not least there's now
   <qb:handler/> which is the same as the basepath for the people who are
   using the .htaccess rewrite, but has an added 'qb.php' (or however you've
   named qb's handler script) for people who aren't (for example because they
   are using lighttpd).
 - Template tags and a lot more documented in the README.html.
 - new: <qb:cleanpath> to remove double slashes and fix root directory 
   installation problems.
 - new: set <created:> or <modified:> in the meta line to override the file's 
   actual metadata.
 - new: set <modified:!> to make the file appear unmodified.
 - new: <qb:ifnotset:*> tag.

Version 0.2.2 (2007-05-06):
 - bugfix for 0.2.1: If the number of items was exactly divisible by
   QB_MAXITEMS, qb would calculate the page number as one too much, leaving you
   with an empty last page.

Version 0.2.1 (2007-05-06):
 - bugfix for 0.2: <qb:ifset> was not working like it should when nesting
   multiple ifsets that evaluated to false. This would for example seriously
   break the sample template when less than QB_MAXITEMS were in the blog. Fixed
   by using back references in two regexes now.

Version 0.2 (2007-05-06):
 - new: Split the output into multiple pages. The desired page number can be
   chosen by putting a positive integer into the "query" part of the URL ("?5").
 - commented the whole code and configuration file, but not the templates
 - removed unneeded code parts from pre-0.1

Version 0.1 (2007-03-22):
 - initial release of that what seems to work on scytale.de to the public